#
# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/lite/config/component/lite_component.gni")

if (defined(ohos_lite)) {
  config("openssl_config") {
    include_dirs = [
      "include",
      "crypto/include",
      "crypto/ec",
      ".",
    ]

    cflags = [
      "-fPIC",
      "-DOPENSSL_ARM_PLATFORM",
    ]
  }

  openssl_source = [
    "crypto/cryptlib.c",
    "crypto/ec/curve25519.c",
    "crypto/mem_clr.c",
    "crypto/sha/sha512.c",
  ]

  lite_library("openssl_shared") {
    target_type = "shared_library"
    sources = openssl_source
    public_configs = [ ":openssl_config" ]
  }
}
